--- a/Middleware_practica/documentation/latex/annotated.tex
+++ b/Middleware_practica/documentation/latex/annotated.tex
@@ -1,8 +1,8 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{class_blitter}{Blitter}} }{\pageref{class_blitter}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_brush}{Brush}} }{\pageref{class_brush}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_height_buffer}{Height\+Buffer}} }{\pageref{class_height_buffer}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classesne_1_1_brush}{esne\+::\+Brush}} }{\pageref{classesne_1_1_brush}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classesne_1_1_height_buffer}{esne\+::\+Height\+Buffer}} }{\pageref{classesne_1_1_height_buffer}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classesne_1_1_image_controller}{esne\+::\+Image\+Controller}} }{\pageref{classesne_1_1_image_controller}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classesne_1_1_image_loader}{esne\+::\+Image\+Loader}} }{\pageref{classesne_1_1_image_loader}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classesne_1_1_main_window}{esne\+::\+Main\+Window}} }{\pageref{classesne_1_1_main_window}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_round_brush}{Round\+Brush}} }{\pageref{class_round_brush}}{}
 \end{DoxyCompactList}
