--- a/Middleware_practica/documentation/latex/hierarchy.tex
+++ b/Middleware_practica/documentation/latex/hierarchy.tex
@@ -1,13 +1,9 @@
 \doxysection{Class Hierarchy}
 This inheritance list is sorted roughly, but not completely, alphabetically\+:\begin{DoxyCompactList}
-\item \contentsline{section}{Blitter}{\pageref{class_blitter}}{}
-\item \contentsline{section}{Height\+Buffer}{\pageref{class_height_buffer}}{}
-\begin{DoxyCompactList}
-\item \contentsline{section}{Brush}{\pageref{class_brush}}{}
-\begin{DoxyCompactList}
-\item \contentsline{section}{Round\+Brush}{\pageref{class_round_brush}}{}
-\end{DoxyCompactList}
-\end{DoxyCompactList}
+\item \contentsline{section}{esne\+::Brush}{\pageref{classesne_1_1_brush}}{}
+\item \contentsline{section}{esne\+::Height\+Buffer}{\pageref{classesne_1_1_height_buffer}}{}
+\item \contentsline{section}{esne\+::Image\+Controller}{\pageref{classesne_1_1_image_controller}}{}
+\item \contentsline{section}{esne\+::Image\+Loader}{\pageref{classesne_1_1_image_loader}}{}
 \item Ui\+::Main\+Window\+Class\begin{DoxyCompactList}
 \item \contentsline{section}{esne\+::Main\+Window}{\pageref{classesne_1_1_main_window}}{}
 \end{DoxyCompactList}
