--- a/Middleware_practica/documentation/latex/refman.tex
+++ b/Middleware_practica/documentation/latex/refman.tex
@@ -213,17 +213,22 @@
 \chapter{File Index}
 \input{files}
 \chapter{Class Documentation}
-\input{class_blitter}
-\input{class_brush}
-\input{class_height_buffer}
+\input{classesne_1_1_brush}
+\input{classesne_1_1_height_buffer}
+\input{classesne_1_1_image_controller}
+\input{classesne_1_1_image_loader}
 \input{classesne_1_1_main_window}
-\input{class_round_brush}
 \chapter{File Documentation}
-\input{_blitter_8h_source}
+\input{_brush_8h}
 \input{_brush_8h_source}
+\input{_height_buffer_8h}
 \input{_height_buffer_8h_source}
+\input{_image_controller_8h}
+\input{_image_controller_8h_source}
+\input{_image_loader_8cpp}
+\input{_image_loader_8h}
+\input{_image_loader_8h_source}
 \input{_main_window_8hpp_source}
-\input{_round_brush_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
