--- a/Middleware_practica/documentation/latex/files.tex
+++ b/Middleware_practica/documentation/latex/files.tex
@@ -1,8 +1,9 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{_blitter_8h_source}{Blitter.\+h}} }{\pageref{_blitter_8h_source}}{}
-\item\contentsline{section}{\mbox{\hyperlink{_brush_8h_source}{Brush.\+h}} }{\pageref{_brush_8h_source}}{}
-\item\contentsline{section}{\mbox{\hyperlink{_height_buffer_8h_source}{Height\+Buffer.\+h}} }{\pageref{_height_buffer_8h_source}}{}
-\item\contentsline{section}{\mbox{\hyperlink{_main_window_8hpp_source}{Main\+Window.\+hpp}} }{\pageref{_main_window_8hpp_source}}{}
-\item\contentsline{section}{\mbox{\hyperlink{_round_brush_8h_source}{Round\+Brush.\+h}} }{\pageref{_round_brush_8h_source}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_brush_8h}{Brush.\+h}} \\*Archivo encargado de definir la brocha y sus variables }{\pageref{_brush_8h}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_height_buffer_8h}{Height\+Buffer.\+h}} \\*Archivo encargado de crear un buffer de datos para las imagenes y ser el objetivo de las modificaciones a las mismas }{\pageref{_height_buffer_8h}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_image_controller_8h}{Image\+Controller.\+h}} \\*Archivo encargado de interactuar directamente con la imagen }{\pageref{_image_controller_8h}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_image_loader_8cpp}{Image\+Loader.\+cpp}} \\*Implementación del encargado de cargar imagenes }{\pageref{_image_loader_8cpp}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_image_loader_8h}{Image\+Loader.\+h}} \\*Archivo encargado de cargar imagenes }{\pageref{_image_loader_8h}}{}
+\item\contentsline{section}{F\+:/\+Github/\+Practica\+\_\+\+Middleware/\+Middleware\+\_\+practica/code/\mbox{\hyperlink{_main_window_8hpp_source}{Main\+Window.\+hpp}} }{\pageref{_main_window_8hpp_source}}{}
 \end{DoxyCompactList}
